force-app/main/default/objects/Project_Unit__c/fields/Actual_Area_value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Area_value__c</fullName>
    <label>Actual Area value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>