force-app/main/default/objects/Project_Unit__c/fields/Avail_Service_Room__c.field-meta.xml
<CustomField>
    <fullName>Avail_Service_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avail Service Room</label>
    <type>Checkbox</type>
</CustomField>