force-app/main/default/objects/Project_Unit__c/fields/Bed_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Bed_Rooms__c</fullName>
    <label>Bed Rooms</label>
    <length>10</length>
    <type>Text</type>
</CustomField>