force-app/main/default/objects/Project_Unit__c/fields/Booking_Source1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source1__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Other Media</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Print Magzines</fullName>
            </value>
            <value>
                <fullName>Print Newspaper</fullName>
            </value>
            <value>
                <fullName>Property and Other Portals</fullName>
            </value>
            <value>
                <fullName>R Circle Caller</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Zee Marathi TVC</fullName>
            </value>
            <value>
                <fullName>PreSales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>