force-app/main/default/objects/Project_Unit__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Partner</label>
    <type>Checkbox</type>
</CustomField>