force-app/main/default/objects/Project_Unit__c/fields/Chargeable_Area__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Area__c</fullName>
    <label>Chargeable Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>