force-app/main/default/objects/Project_Unit__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <formula>TowerName__r.Zone_Name__r.Name</formula>
    <label>Cluster</label>
    <type>Text</type>
</CustomField>