force-app/main/default/objects/Project_Unit__c/fields/HNI__c.field-meta.xml
<CustomField>
    <fullName>HNI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HNI</label>
    <type>Checkbox</type>
</CustomField>