force-app/main/default/objects/Project_Unit__c/fields/IOM__c.field-meta.xml
<CustomField>
    <fullName>IOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM</label>
    <referenceTo>IOM__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>