force-app/main/default/objects/Project_Unit__c/fields/Is_Booking_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Tagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Tagged</label>
    <type>Checkbox</type>
</CustomField>