force-app/main/default/objects/Project_Unit__c/fields/Is_Service_Room_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Room_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Room Unit</label>
    <type>Checkbox</type>
</CustomField>