force-app/main/default/objects/Project_Unit__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>