force-app/main/default/objects/Project_Unit__c/fields/Loading__c.field-meta.xml
<CustomField>
    <fullName>Loading__c</fullName>
    <label>Loading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>