force-app/main/default/objects/Project_Unit__c/fields/MLCP_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>MLCP_Earmarked__c</fullName>
    <label>MLCP (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>