force-app/main/default/objects/Project_Unit__c/fields/New_Floor__c.field-meta.xml
<CustomField>
    <fullName>New_Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
                <label>Basement 1</label>
            </value>
            <value>
                <fullName>-2</fullName>
                <label>Basement 2</label>
            </value>
            <value>
                <fullName>-3</fullName>
                <label>Basement 3</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>106</fullName>
            </value>
            <value>
                <fullName>107</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>109</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>114</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>116</fullName>
            </value>
            <value>
                <fullName>117</fullName>
            </value>
            <value>
                <fullName>118</fullName>
            </value>
            <value>
                <fullName>119</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>122</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>