force-app/main/default/objects/Project_Unit__c/fields/New_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R66</fullName>
                <label>1.5 BHK with Deck</label>
            </value>
            <value>
                <fullName>R02</fullName>
                <label>1 ½ BHK</label>
            </value>
            <value>
                <fullName>R01</fullName>
                <label>1BHK</label>
            </value>
            <value>
                <fullName>R46</fullName>
                <label>1 BHK Grande</label>
            </value>
            <value>
                <fullName>R47</fullName>
                <label>1 BHK Luxe</label>
            </value>
            <value>
                <fullName>R48</fullName>
                <label>1 BHK Luxe-Deck</label>
            </value>
            <value>
                <fullName>R77</fullName>
                <label>1 BHK OPTIMA</label>
            </value>
            <value>
                <fullName>R49</fullName>
                <label>1 BHK Prime</label>
            </value>
            <value>
                <fullName>R72</fullName>
                <label>1 BHK Prime with Deck</label>
            </value>
            <value>
                <fullName>R76</fullName>
                <label>1 BHK SMART</label>
            </value>
            <value>
                <fullName>R75</fullName>
                <label>1 BHK ULTIMA</label>
            </value>
            <value>
                <fullName>R71</fullName>
                <label>1 BHK with Deck</label>
            </value>
            <value>
                <fullName>R37</fullName>
                <label>1RK</label>
            </value>
            <value>
                <fullName>R06</fullName>
                <label>2 ½ BHK</label>
            </value>
            <value>
                <fullName>R03</fullName>
                <label>2BHK</label>
            </value>
            <value>
                <fullName>R61</fullName>
                <label>2 BHK C</label>
            </value>
            <value>
                <fullName>R50</fullName>
                <label>2 BHK Grande</label>
            </value>
            <value>
                <fullName>R58</fullName>
                <label>2 BHK Grande w/o deck</label>
            </value>
            <value>
                <fullName>R04</fullName>
                <label>2 BHK Large</label>
            </value>
            <value>
                <fullName>R59</fullName>
                <label>2 BHK L - Deck</label>
            </value>
            <value>
                <fullName>R51</fullName>
                <label>2 BHK Luxe</label>
            </value>
            <value>
                <fullName>R52</fullName>
                <label>2 BHK Luxe-Deck</label>
            </value>
            <value>
                <fullName>R43</fullName>
                <label>2 BHK Luxury</label>
            </value>
            <value>
                <fullName>R74</fullName>
                <label>2 BHK OPTIMA</label>
            </value>
            <value>
                <fullName>R44</fullName>
                <label>2 BHK Premium</label>
            </value>
            <value>
                <fullName>R53</fullName>
                <label>2 BHK Prime</label>
            </value>
            <value>
                <fullName>R54</fullName>
                <label>2 BHK Prime-Deck</label>
            </value>
            <value>
                <fullName>R05</fullName>
                <label>2 BHK Small</label>
            </value>
            <value>
                <fullName>R73</fullName>
                <label>2 BHK ULTIMA</label>
            </value>
            <value>
                <fullName>R68</fullName>
                <label>2 BHK with Deck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>