force-app/main/default/objects/Project_Unit__c/fields/New_View__c.field-meta.xml
<CustomField>
    <fullName>New_View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>East Facing</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>West Facing</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>South</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>North</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>North - East</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>North - West</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>South - East</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>South - West</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>East - West</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Pool</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Clube House</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Temple</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Main road</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Road</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Sea</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>internal Road</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Garden</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Park</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Landscap Podium</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>River / Lake</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Hill</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Greenery</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>HDIL</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>MGLR</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>MGLR/Greens</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>MGLR/National Park</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>National Park</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Greens</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Cluster Garden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>