force-app/main/default/objects/Project_Unit__c/fields/NRI__c.field-meta.xml
<CustomField>
    <fullName>NRI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRI</label>
    <type>Checkbox</type>
</CustomField>