force-app/main/default/objects/Project_Unit__c/fields/Outstation__c.field-meta.xml
<CustomField>
    <fullName>Outstation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstation</label>
    <type>Checkbox</type>
</CustomField>