force-app/main/default/objects/Project_Unit__c/fields/PAGE_Rating__c.field-meta.xml
<CustomField>
    <fullName>PAGE_Rating__c</fullName>
    <label>PAGE Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Non-Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>