force-app/main/default/objects/Project_Unit__c/fields/PLC1__c.field-meta.xml
<CustomField>
    <fullName>PLC1__c</fullName>
    <label>PLC1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>