force-app/main/default/objects/Project_Unit__c/fields/PLC_Total__c.field-meta.xml
<CustomField>
    <fullName>PLC_Total__c</fullName>
    <formula>CASE(TEXT(S_View1__c),&apos;Garden View&apos;,RW_Project__r.S_View1_PLC__c,
&apos;Park View&apos;, RW_Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, RW_Project__r.S_View3_PLC__c,0)
+
CASE(TEXT(S_View_2__c),&apos;Garden View&apos;,RW_Project__r.S_View1_PLC__c,
&apos;Park View&apos;, RW_Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, RW_Project__r.S_View3_PLC__c,0)
+
CASE(TEXT(S_View_3__c),&apos;Garden View&apos;,RW_Project__r.S_View1_PLC__c,
&apos;Park View&apos;, RW_Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, RW_Project__r.S_View3_PLC__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>