force-app/main/default/objects/Project_Unit__c/fields/Project_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Unit_Type__c.RDS_Project__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.RW_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Unit_Type__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>