force-app/main/default/objects/Project_Unit__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TowerName__c</field>
            <operation>equals</operation>
            <valueField>Relationship_Manager__c.Tower__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Relationship_Manager__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>