force-app/main/default/objects/Project_Unit__c/fields/RM_Updation_Date__c.field-meta.xml
<CustomField>
    <fullName>RM_Updation_Date__c</fullName>
    <label>RM Updation Date</label>
    <type>Date</type>
</CustomField>