force-app/main/default/objects/Project_Unit__c/fields/RW_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>RW_Base_Rate__c</fullName>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>