force-app/main/default/objects/Project_Unit__c/fields/RW_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>