force-app/main/default/objects/Project_Unit__c/fields/RW_Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking_Source__c</fullName>
    <formula>TEXT(RW_Customer__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Source</label>
    <type>Text</type>
</CustomField>