force-app/main/default/objects/Project_Unit__c/fields/RW_Built_UP_Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>RW_Built_UP_Unit_Area__c</fullName>
    <label>Built UP Unit Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>