force-app/main/default/objects/Project_Unit__c/fields/RW_Current_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Current_Customer_Email__c</fullName>
    <label>Customer Owner Email</label>
    <type>Email</type>
</CustomField>