force-app/main/default/objects/Project_Unit__c/fields/RW_Customer__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>