force-app/main/default/objects/Project_Unit__c/fields/RW_Delimeter__c.field-meta.xml
<CustomField>
    <fullName>RW_Delimeter__c</fullName>
    <label>Delimeter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>