force-app/main/default/objects/Project_Unit__c/fields/RW_EOI_Block_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Block_Status__c</fullName>
    <label>EOI Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI Blocked</fullName>
            </value>
            <value>
                <fullName>EOI Available</fullName>
                <default>true</default>
                <label>EOI Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>