force-app/main/default/objects/Project_Unit__c/fields/RW_EOI_Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Blocked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>