force-app/main/default/objects/Project_Unit__c/fields/RW_EOI_Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Blocked_Date__c</fullName>
    <label>EOI Blocked Date</label>
    <type>Date</type>
</CustomField>