force-app/main/default/objects/Project_Unit__c/fields/RW_Param2__c.field-meta.xml
<CustomField>
    <fullName>RW_Param2__c</fullName>
    <label>Param2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>