force-app/main/default/objects/Project_Unit__c/fields/RW_Param3__c.field-meta.xml
<CustomField>
    <fullName>RW_Param3__c</fullName>
    <label>Param3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>