force-app/main/default/objects/Project_Unit__c/fields/RW_PLC__c.field-meta.xml
<CustomField>
    <fullName>RW_PLC__c</fullName>
    <label>PLC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>