force-app/main/default/objects/Project_Unit__c/fields/RW_Project__c.field-meta.xml
<CustomField>
    <fullName>RW_Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>