force-app/main/default/objects/Project_Unit__c/fields/RW_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>RW_Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhay Jaiswal</fullName>
            </value>
            <value>
                <fullName>Abhijit Kargirwar</fullName>
            </value>
            <value>
                <fullName>Abhinandan D Souza</fullName>
            </value>
            <value>
                <fullName>Abhinay Edake</fullName>
            </value>
            <value>
                <fullName>Abhishek Dashehariya</fullName>
            </value>
            <value>
                <fullName>Akanksha Mishra Katyal</fullName>
            </value>
            <value>
                <fullName>Akshay Chandre</fullName>
            </value>
            <value>
                <fullName>Amita Singh</fullName>
            </value>
            <value>
                <fullName>Anarock Team</fullName>
            </value>
            <value>
                <fullName>Anil Rathod</fullName>
            </value>
            <value>
                <fullName>Anita Pawar</fullName>
            </value>
            <value>
                <fullName>Ankit Haria</fullName>
            </value>
            <value>
                <fullName>Anmolak Paneysar</fullName>
            </value>
            <value>
                <fullName>Anup Rauniyar</fullName>
            </value>
            <value>
                <fullName>Apurva Mahajan</fullName>
            </value>
            <value>
                <fullName>Arun Singh</fullName>
            </value>
            <value>
                <fullName>Avinash Jadhav</fullName>
            </value>
            <value>
                <fullName>Bhagyashree Telore</fullName>
            </value>
            <value>
                <fullName>Brijesh Tiwari</fullName>
            </value>
            <value>
                <fullName>Charanjeet Kaur</fullName>
            </value>
            <value>
                <fullName>Deepti Pareek</fullName>
            </value>
            <value>
                <fullName>Devansh Patwa</fullName>
            </value>
            <value>
                <fullName>Deven Sawant</fullName>
            </value>
            <value>
                <fullName>Devika Sharma</fullName>
            </value>
            <value>
                <fullName>Dhaval Hemani</fullName>
            </value>
            <value>
                <fullName>Dhaval Lapasia</fullName>
            </value>
            <value>
                <fullName>Dhrutika Hiten Shah</fullName>
            </value>
            <value>
                <fullName>Gaurav Sharma</fullName>
            </value>
            <value>
                <fullName>Gaurissh Ranade</fullName>
            </value>
            <value>
                <fullName>Hiren Jethva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>