force-app/main/default/objects/Project_Unit__c/fields/RW_Seventh_Day__c.field-meta.xml
<CustomField>
    <fullName>RW_Seventh_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>