force-app/main/default/objects/Project_Unit__c/fields/RW_Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_Area__c</fullName>
    <label>Unit Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>