force-app/main/default/objects/Project_Unit__c/fields/RW_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_Rate__c</fullName>
    <label>Unit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>