force-app/main/default/objects/Project_Unit__c/fields/RW_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Refuge Units</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>