force-app/main/default/objects/Project_Unit__c/fields/S_Charge_Percentage__c.field-meta.xml
<CustomField>
    <fullName>S_Charge_Percentage__c</fullName>
    <label>Charge%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>