force-app/main/default/objects/Project_Unit__c/fields/S_View1__c.field-meta.xml
<CustomField>
    <fullName>S_View1__c</fullName>
    <label>View1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garden View</fullName>
            </value>
            <value>
                <fullName>Sea View</fullName>
            </value>
            <value>
                <fullName>BKC View</fullName>
            </value>
            <value>
                <fullName>Park View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>