force-app/main/default/objects/Project_Unit__c/fields/Service_Room_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Room_Carpet_Area__c</fullName>
    <label>Service Room Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>