force-app/main/default/objects/Project_Unit__c/fields/Service_Room_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Room_Status__c</fullName>
    <label>Service Room Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>