force-app/main/default/objects/Project_Unit__c/fields/Service_Room_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_Room_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Room Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>