force-app/main/default/objects/Project_Unit__c/fields/Single_car_park_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>Single_car_park_Earmarked__c</fullName>
    <label>Single Covered (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>